package Enemies;

public class animations_enemy_enum {
    public final static int walk = 0;
    public static final int attack = 1;
}
