@startuml

title __ENEMIES's Class Diagram__\n

  namespace Enemies {
    abstract class Enemies.Enemy {
        {static} + ciuperca_anim : Animation[]
        {static} + eye_anim : Animation[]
        {static} + goblin_anim : Animation[]
        {static} + skeleton_anim : Animation[]
        {static} + slime_anim : Animation[]
        # attackTimer : int
        # health : int
        # height : int
        # hitPlayer : boolean
        # img : BufferedImage
        # nothingUnder : boolean
        # playerBounds : Rectangle
        # startX : int
        # width : int
        + Enemy()
        + Enemy()
        + getAttackTimer()
        + getBounds()
        + getCurrentAnimation()
        + getHeight()
        + getInAnimation()
        + getStartX()
        + getState()
        + getWidth()
        + isNothingUnder()
        {static} + loadAnimations()
        + mapCollision()
        {abstract} + render()
        + setAttackTimer()
        + setCurrentAnimation()
        + setHitPlayer()
        + updateObserver()
    }
  }
  

  namespace Enemies {
    class Enemies.Eye {
        + Eye()
        + mapCollision()
        + render()
        + tick()
    }
  }
  

  namespace Enemies {
    class Enemies.Goblin {
        + Goblin()
        + render()
        + tick()
    }
  }
  

  namespace Enemies {
    class Enemies.Scheletron {
        + Scheletron()
        + render()
        + tick()
    }
  }
  

  namespace Enemies {
    class Enemies.animations_enemy_enum {
        {static} + attack : int
        {static} + walk : int
    }
  }
  

  Enemies.Enemy .up.|> Observer.Observer
  Enemies.Enemy -up-|> GameObject.GameObject
  Enemies.Enemy o-- SpriteSheet.Animation : currentAnimation
  Enemies.Enemy o-- ChestiiRandom.MutableBoolean : inAnimation
  Enemies.Enemy o-- Enemies.States.EnemyState : state
  Enemies.Eye -up-|> Enemies.Enemy
  Enemies.Goblin -up-|> Enemies.Enemy
  Enemies.Scheletron -up-|> Enemies.Enemy


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
